fix horizontal scrolling: disable

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,11 @@
     font-weight: bold;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .header {
     position: relative;
     position: relative;
